--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "description": "PostCSS and SASS sample",
   "repository": "git@github.com:newbornfrontender/postcss-sass-sample.git",
   "author": "Infant Frontender <newbornfrontender@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "clean": "rm -rf dist",
+    "compile": "yarn clean && postcss src -d dist",
+    "compile:start": "yarn clean && yarn compile -w",
+    "compile:build": "yarn clean && yarn compile -m --env production"
+  },
+  "devDependencies": {
+    "cssnano": "^4.1.10",
+    "postcss-cli": "^6.1.2",
+    "postcss-mixins": "^6.2.1",
+    "postcss-scss": "^2.0.0",
+    "precss": "^4.0.0"
+  }
 }
