--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Infant Frontender <newbornfrontender@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "format": "prettier --write **/*.{js,json,md}",
+    "lint:check": "stylelint-config-prettier-check",
+    "lint:fix": "stylelint --fix **/*.css",
     "clean": "rm -rf dist",
     "compile": "yarn clean && postcss src -d dist",
     "compile:start": "yarn clean && yarn compile -w",
@@ -15,8 +18,13 @@
     "cssnano": "4.1.10",
     "postcss-cli": "6.1.2",
     "postcss-mixins": "6.2.1",
-    "postcss-scss": "2.0.0",
     "postcss-sorting": "^4.1.0",
-    "precss": "4.0.0"
+    "precss": "4.0.0",
+    "prettier": "^1.16.4",
+    "stylelint": "^9.10.1",
+    "stylelint-config-prettier": "^5.0.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^2.1.0",
+    "stylelint-prettier": "^1.0.6"
   }
 }
